# Gores-Map-Downloader

./: Cargo.toml  LICENSE  README.md  build-dev-release.bat  build-release.bat  build.rs
src/: constants.rs  db.rs  main.rs  settings.rs  theme.rs  types.rs  utils.rs
src/app/: context_menu.rs  downloads.rs  filters.rs  mod.rs  modals.rs  thumbnails.rs  updates.rs  views.rs
src/ui/: components.rs  mod.rs
